[package]
name = "proxyparser"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/auser/proxyparser"
authors = ["Ari Lerner <me@ari.io>"]
description = "A tool for parsing proxy files and generating nginx configs"
homepage = "https://github.com/auser/proxyparser"

[package.metadata.wix]
upgrade-guid = "1A9995D8-EDBF-441E-97A6-8229E00A9AA7"
path-guid = "28379336-036D-4563-8BD5-CD3D1D9B6265"
license = false
eula = false

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive", "unstable-doc"] }
env_logger = "0.11.5"
keymap = "0.4.0"
log = { version = "0.4.22", features = ["serde"] }
misc-conf = "0.1.2"
promkit = "0.4.5"
radix_trie = { version = "0.2.1", features = ["serde"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"
walkdir = "2.5.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
